--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
       context: .
       dockerfile: ./deploy/dockerfiles/Dockerfile
     environment:
-     - MONGOHOST=mongodb
+      - MONGOHOST=mongodb
+    env_file:
+      - .env
     volumes:
       - ./:/code
     ports:
